# idlgen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  vcpkg-configuration.json  vcpkg.json
idlgen/: __init__.py  c_api_generator.py  client_generator.py  common_generator.py  jni_generator.py  parser.py  python_generator.py  type_mapper.py  types.py  wasm_generator.py
samples/: CMakeLists.txt  samples.cpp  samples.hpp  samples.idl
samples/tests/cpp/: samples_test.cpp
samples/tests/java/: .classpath
samples/tests/java/idl/samples/: SamplesTest.java
samples/tests/python/: samples_test.py
samples/tests/wasm/: samples_test.js
triplets/: wasm32-emscripten.cmake
