[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idlgen"
version = "1.0.0"
description = "IDL Code Generator for C++, WASM, JNI bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
idlgen = "bin.generate_bindings:main"

[tool.setuptools.packages.find]
where = ["."]
